Fixed word-wrap in highlight and code padding

--- a/assets/scss/_syntax-highlighting.scss
+++ b/assets/scss/_syntax-highlighting.scss
@@ -4,11 +4,17 @@
 .highlight {
   border-radius: 2px;
   margin: $base-spacing 0 4em;
-  padding: 0;
+  padding: .8em 1em;
   box-shadow: 0px 0px 2px rgba($black-color, .1);
+
+  white-space: pre-wrap;
 
   .highlighter-rouge &, &, .hll, pre, code {
     background-color: #f8f8f8 !important;
+  }
+
+  code {
+    padding: 0 !important;
   }
 
   pre {
